syntax = "proto3";

package Core.Protos;

option csharp_namespace = "Core";

message DateOnly {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}
