syntax = "proto3";

package Core.Protos;

option csharp_namespace = "Core";

import "Protos/custom_types.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ExchangeRateService {
  rpc GetAll (GetAllRequest) returns (GetAllExchangeRatesResponse);
  rpc GetById (GetExchangeRateByIdRequest) returns (ExchangeRateModel);
  rpc GetByIds (GetExchangeRateByIdsRequest) returns (GetAllExchangeRatesResponse);
  rpc GetByBaseCurrency (GetExchangeRateByBaseCurrencyRequest) returns (GetAllExchangeRatesResponse);
  rpc Add (AddExchangeRateRequest) returns (ExchangeRateModel);
  rpc Update (UpdateExchangeRateRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteExchangeRateRequest) returns (google.protobuf.Empty);
  rpc AddBulk (AddExchangeRateBulkRequest) returns (google.protobuf.Empty);
  rpc UpdateBulk (UpdateExchangeRateBulkRequest) returns (google.protobuf.Empty);
  rpc DeleteBulk (DeleteExchangeRateBulkRequest) returns (google.protobuf.Empty);
}

message ExchangeRateModel {
  int32 rate_id = 1;
  optional string base_currency = 2;
  optional string target_currency = 3;
  optional string rate = 4;
  optional google.protobuf.Timestamp updated_at = 5;
}

message GetAllExchangeRatesResponse {
  repeated ExchangeRateModel exchange_rates = 1;
}

message GetExchangeRateByIdRequest {
  int32 rate_id = 1;
}

message GetExchangeRateByIdsRequest {
  repeated int32 rate_ids = 1;
}

message GetExchangeRateByBaseCurrencyRequest {
  string base_currency = 1;
}

message AddExchangeRateRequest {
  optional string base_currency = 1;
  optional string target_currency = 2;
  optional string rate = 3;
}

message UpdateExchangeRateRequest {
  int32 rate_id = 1;
  optional string base_currency = 2;
  optional string target_currency = 3;
  optional string rate = 4;
}

message DeleteExchangeRateRequest {
  int32 rate_id = 1;
}

message AddExchangeRateBulkRequest {
  repeated AddExchangeRateRequest exchange_rates = 1;
} 

message UpdateExchangeRateBulkRequest {
  repeated UpdateExchangeRateRequest exchange_rates = 1;
}

message DeleteExchangeRateBulkRequest {
  repeated DeleteExchangeRateRequest exchange_rates = 1;
}
