syntax = "proto3";

package Core.Protos;

option csharp_namespace = "Core";

import "Protos/custom_types.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "Protos/customer.proto";

service NotificationService {
  rpc GetAll (GetAllRequest) returns (GetAllNotificationsResponse);
  rpc GetById (GetNotificationByIdRequest) returns (NotificationModel);
  rpc GetByDateRange (GetByDateRangeRequest) returns (GetAllNotificationsResponse);
  rpc Add (AddNotificationRequest) returns (NotificationModel);
  rpc Update (UpdateNotificationRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteNotificationRequest) returns (google.protobuf.Empty);
  rpc AddBulk (AddNotificationBulkRequest) returns (google.protobuf.Empty);
  rpc UpdateBulk (UpdateNotificationBulkRequest) returns (google.protobuf.Empty);
  rpc DeleteBulk (DeleteNotificationBulkRequest) returns (google.protobuf.Empty);
}

message NotificationModel {
  int32 notification_id = 1;
  optional int32 customer_id = 2;
  optional string message = 3;
  optional google.protobuf.Timestamp created_at = 4;
  optional bool is_read = 5;
}

message GetAllNotificationsResponse {
  repeated NotificationModel notifications = 1;
}

message GetNotificationByIdRequest {
  int32 notification_id = 1;
}

message AddNotificationRequest {
  optional int32 customer_id = 1;
  optional string message = 2;
  optional bool is_read = 3;
}

message UpdateNotificationRequest {
  int32 notification_id = 1;
  optional int32 customer_id = 2;
  optional string message = 3;
  optional bool is_read = 4;
}

message DeleteNotificationRequest {
  int32 notification_id = 1;
}

message AddNotificationBulkRequest {
  repeated AddNotificationRequest notifications = 1;
}

message UpdateNotificationBulkRequest {
  repeated UpdateNotificationRequest notifications = 1;
}

message DeleteNotificationBulkRequest {
  repeated DeleteNotificationRequest notifications = 1;
}
