syntax = "proto3";

package Core.Protos;

option csharp_namespace = "Core";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "Protos/account.proto";

service TransactionService {
  rpc GetAll (google.protobuf.Empty) returns (GetAllTransactionsResponse);
  rpc GetById (GetTransactionByIdRequest) returns (TransactionModel);
  rpc Add (AddTransactionRequest) returns (TransactionModel);
  rpc Update (UpdateTransactionRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteTransactionRequest) returns (google.protobuf.Empty);
  rpc AddBulk (AddTransactionBulkRequest) returns (google.protobuf.Empty);
  rpc UpdateBulk (UpdateTransactionBulkRequest) returns (google.protobuf.Empty);
  rpc DeleteBulk (DeleteTransactionBulkRequest) returns (google.protobuf.Empty);
}

message TransactionModel {
  int32 transaction_id = 1;
  optional int32 source_account = 2;
  optional int32 target_account = 3;
  string amount = 4;
  string currency = 5;
  optional google.protobuf.Timestamp created_at = 6;
  optional string status = 7;
}

message GetAllTransactionsResponse {
  repeated TransactionModel transactions = 1;
}

message GetTransactionByIdRequest {
  int32 transaction_id = 1;
}

message AddTransactionRequest {
  optional int32 source_account = 1;
  optional int32 target_account = 2;
  string amount = 3;
  string currency = 4;
  optional string status = 5;
}

message UpdateTransactionRequest {
  int32 transaction_id = 1;
  optional int32 source_account = 2;
  optional int32 target_account = 3;
  string amount = 4;
  string currency = 5;
  optional string status = 6;
}

message DeleteTransactionRequest {
  int32 transaction_id = 1;
}

message AddTransactionBulkRequest {
  repeated AddTransactionRequest transactions = 1;
}

message UpdateTransactionBulkRequest {
  repeated UpdateTransactionRequest transactions = 1;
}

message DeleteTransactionBulkRequest {
  repeated DeleteTransactionRequest transactions = 1;
}