syntax = "proto3";

package Core.Protos;

option csharp_namespace = "Core";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "Protos/customer.proto";
import "Protos/custom_types.proto";

service UserCredentialService {
  rpc GetAll (GetAllRequest) returns (GetAllUserCredentialsResponse);
  rpc GetById (GetUserCredentialByIdRequest) returns (UserCredentialModel);
  rpc GetByUsername (GetUserCredentialByUsernameRequest) returns (UserCredentialModel);
  rpc Add (AddUserCredentialRequest) returns (UserCredentialModel);
  rpc Update (UpdateUserCredentialRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteUserCredentialRequest) returns (google.protobuf.Empty);
}

message UserCredentialModel {
  int32 customer_id = 1;
  string username = 2;
  string password_hash = 3;
  optional google.protobuf.Timestamp updated_at = 4;
}

message GetAllUserCredentialsResponse {
  repeated UserCredentialModel user_credentials = 1;
}

message GetUserCredentialByIdRequest {
  int32 customer_id = 1;
}

message GetUserCredentialByUsernameRequest {
  string username = 1;
}

message AddUserCredentialRequest {
  int32 customer_id = 1;
  string username = 2;
  string password_hash = 3;
}

message UpdateUserCredentialRequest {
  int32 customer_id = 1;
  string username = 2;
  string password_hash = 3;
}

message DeleteUserCredentialRequest {
  int32 customer_id = 1;
}
